--- a/index.ipynb
+++ b/index.ipynb
@@ -37,9 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fork & Fig'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fork_fig = {'categories': [{'alias': 'burgers', 'title': 'Burgers'},\n",
     "  {'alias': 'sandwiches', 'title': 'Sandwiches'},\n",
@@ -65,7 +76,8 @@
     " 'review_count': 604,\n",
     " 'transactions': [],\n",
     " 'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}\n",
-    "\n"
+    "\n",
+    "fork_fig['name']"
    ]
   },
   {
