Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,20 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Fork & Fig'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fork_fig = {'categories': [{'alias': 'burgers', 'title': 'Burgers'},\n",
     "  {'alias': 'sandwiches', 'title': 'Sandwiches'},\n",
@@ -75,9 +64,7 @@
     " 'rating': 4.5,\n",
     " 'review_count': 604,\n",
     " 'transactions': [],\n",
-    " 'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}\n",
-    "\n",
-    "fork_fig['name']"
+    " 'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}"
    ]
   },
   {
@@ -89,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
