--- a/index.ipynb
+++ b/index.ipynb
@@ -317,12 +317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    bool(restaurant['rating'] > alternative[rating]"
+    "    return bool(restaurant['rating'] > alternative[rating])    "
    ]
   },
   {
