--- a/index.ipynb
+++ b/index.ipynb
@@ -401,17 +401,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    len(restaurant[price]) > len(alternative['price'])"
+    "    len(restaurant['price']) > len(alternative['price'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
